--- a/src/app/forecast/forecast.component.html
+++ b/src/app/forecast/forecast.component.html
@@ -21,6 +21,7 @@
   <ng-template [ngSwitchCase]="'raining'">Il pleut !</ng-template>
   <ng-template [ngSwitchCase]="'cloudy'">Il fait pas beau mais il pleut pas !</ng-template>
   <ng-template [ngSwitchCase]="'sunny'">Il fait beau : GO GARDEN PARTY !</ng-template>
+  <ng-template ngSwitchDefault>Il y a pas de météo !</ng-template>
 </span>
 
 </body>
